Mon Dec  9 02:10:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/responses.rb:
	  Add `HTTPIMUsed`, as it is also supported by rack/rails.
	  RFC - http://tools.ietf.org/html/rfc3229
	  by Vipul A M <vipulnsward@gmail.com>
	  https://github.com/ruby/ruby/pull/447 fix GH-447

Sun Dec  8 20:47:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_get_kwargs): when values is non-null, remove
	  extracted keywords from the rest keyword argument.

Sun Dec  8 20:26:54 2013  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* common.mk (ruby.imp): avoid circular dependency on AIX

Sun Dec  8 20:21:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* bigdecimal.c (BigDecimal_coerce): convert a Float to a BigDecimal instead
	  of converting the receiver to a Float.  The reason is there are BigDecimal
	  instances with precisions that is smaller than the Float's precision.
	  [ruby-core:58756] [Bug #9192]

	* test/bigdecimal/test_bigdecimal.rb: add tests for the above change.

Sun Dec  8 18:28:20 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* NEWS: [DOC] update NEWS about GC.

Sun Dec  8 17:52:24 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* object.c: [DOC] document Module#singleton_class?.

Sun Dec  8 16:19:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_get_kwargs): if optional is negative, unknown
	  keywords are allowed.

	* vm_insnhelper.c (vm_callee_setup_keyword_arg): check unknown
	  keywords.

Sun Dec  8 14:55:12 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* array.c (rb_ary_shuffle_bang, rb_ary_sample): rename local variables.

Sun Dec  8 13:59:38 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* array.c (rb_ary_shuffle_bang, rb_ary_sample): check
	  unknown keywords.

	* test/ruby/test_array.rb (test_shuffle, test_sample): tests for
	  the above.

Sun Dec  8 13:01:11 2013  Aman Gupta <ruby@tmm1.net>

	* vm.c (ruby_vm_stat): add RubyVM.stat() for access to internal cache
	  counters. this methods behaves like GC.stat, accepting an optional